--- a/Entrega2-war/web/jefeServicio.xhtml
+++ b/Entrega2-war/web/jefeServicio.xhtml
@@ -127,6 +127,9 @@
                 <script src="resources/plantilla/js/plugins/morris/morris.min.js"></script>
                 <script src="resources/plantilla/js/plugins/morris/morris-data.js"></script>
             </c:when>
+             <c:otherwise>
+                <link href="index.xhtml" />
+            </c:otherwise>
         </c:choose>
     </h:body>
 
