--- a/Entrega2-war/web/login.xhtml
+++ b/Entrega2-war/web/login.xhtml
@@ -2,102 +2,116 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Servicios Sociales</title>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
+
+        <title>Serviscios Sociales</title>
 
         <!-- Bootstrap Core CSS -->
-        <link href="resources/css/bootstrap.min.css" rel="stylesheet"></link>
+        <link href="resources/css/bootstrap.min.css" rel="stylesheet"/>
 
         <!-- Custom CSS -->
-        <link href="resources/css/landing-page.css" rel="stylesheet"></link> 
-        <link href="resources/css/login.css" rel="stylesheet"></link>
+        <link href="resources/css/landing-page.css" rel="stylesheet"/>
+        <link href="resources/css/login.css" rel="stylesheet"/>
         <!-- Custom Fonts -->
-        <link href="resources/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"></link>
-        <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css"></link>
+        <link href="resources/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+        <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css"/>
 
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        <link href="resources/css/nuevo.css" rel="stylesheet"/>
     </h:head>
     <h:body>
+        <div class="intro-header">
+            <h1>Servicios Sociales Comunitarios</h1>
+            <h4>Ayuntamiento de M&aacute;laga</h4>
+            <hr class="intro-divider">
+                <h2>Por favor inicie sesi&oacute;n</h2>
+                <div class="container">
+
+                    <div class="row">
+                        <div class="col-lg-12">
 
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-            <div class="container topnav">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand topnav" href="#">Servicios Comunitarios</a>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container -->
-        </nav>
 
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="pr-wrap">
+                                        <div class="pass-reset">
+                                            <label>
+                                                Enter the email you signed up with</label>
+                                            <input type="email" placeholder="Email" />
+                                            <input type="submit" value="Submit" class="pass-reset-submit btn btn-success btn-sm" />
+                                        </div>
+                                    </div>
+                                    <div class="wrap">
+                                        <c:choose>
 
-        <!-- Header -->
+                                            <c:when test="#{empty controlAutorizacion.usuario}">
+                                                <h:form class="login">
+                                                    <p:inputText value="#{login.usuario}" placeholder="Nombre de usuario" />
+                                                    <p:password value="#{login.contrasenia}"  placeholder="Contrase&ntilde;a" />
+                                                    <h:commandButton type="submit" value="Entrar" class="btn btn-success btn-sm" action="#{login.autenticar()}" />
+                                                    <div class="remember-forgot">
+                                                        <div class="row">
+                                                            <div class="col-md-6">
+                                                                <div class="checkbox">
 
-        <a name="about"></a>
-        <div class="intro-header" >
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro-message">
-                        <div class="row">
-                            <div class="col-md-12">
-
-                                <div class="wrap">
-                                    <c:choose>
-                                        <c:when test="#{empty controlAutorizacion.usuario}">
-                                            <p class="form-title">
-                                                Sign In</p>
-                                            <h:form class="login">
-                                                <p:inputText value="#{login.usuario}"/>
-                                                <p:password  value="#{login.contrasenia}"/>
-                                                <h:commandButton value="Sign In" action="#{login.autenticar()}"  />
-                                                <div class="remember-forgot">
-                                                    <div class="row">
-                                                        <div class="col-md-6">
-                                                            <div class="checkbox">
-                                                                <label>
-                                                                    <input type="checkbox" />
-                                                                    Remember Me
-                                                                </label>
+                                                                </div>
                                                             </div>
+                                                            <!--div class="col-md-6 forgot-pass-content">
+                                                                <a href="javascription:void(0)" class="forgot-pass">Olvide mi contrase&ntilde;a</a>
+                                                            </div-->
                                                         </div>
-                                                        
                                                     </div>
-                                                </div>
-                                            </h:form>
-                                        </c:when>
-                                        <c:otherwise>
-                                            <h:form>
-                                                <p>la sesion ya esta iniciada</p>
-                                                <h:commandButton value="Ir a mi pg" action="#{controlAutorizacion.home()}"  />
-                                                <h:commandButton value="Log Out" action="#{controlAutorizacion.logout()}" />
-                                            </h:form>
-                                        </c:otherwise>
-                                    </c:choose>
+                                                </h:form>
+                                            </c:when>
+                                            <c:otherwise>
+                                                <h:form>
+                                                    <p>la sesion ya esta iniciada</p>
+                                                    <h:commandButton value="Ir a mi pg" action="#{controlAutorizacion.home()}"  />
+                                                    <h:commandButton value="Log Out" action="#{controlAutorizacion.logout()}" />
+                                                </h:form>
+                                            </c:otherwise>
+                                        </c:choose>
+
+                                    </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
-            </div>
+            </hr>
         </div>
+
+
+        <!-- /.container -->
+
+
+
+
         <!-- /.intro-header -->
 
+        <!-- Page Content -->
+
+
+
         <!-- jQuery -->
-        <script src="resources/js/jquery.js"></script>
+        <script src="js/jquery.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
-        <script src="resources/js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
 
     </h:body>
 </html>
