--- a/Entrega2-war/web/asignarDemandasAtecnicos.xhtml
+++ b/Entrega2-war/web/asignarDemandasAtecnicos.xhtml
@@ -146,7 +146,7 @@
                                             <h:outputText value="#{tec.apellidos}" />
                                         </p:column>
                                         <p:column headerText="demandas">
-                                            <h:outputText value="#{demandas.numeroDemandas(tec)}" />
+                                            <h:outputText value="#{demandas.numDemandas(tec)}" />
                                         </p:column>
                                         
                                     </p:dataTable>
