--- a/Entrega2-war/web/verCiudadanos.xhtml
+++ b/Entrega2-war/web/verCiudadanos.xhtml
@@ -79,24 +79,24 @@
                         </ul>
                         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
                         <div class="collapse navbar-collapse navbar-ex1-collapse">
-                            <center>  <h:form>
-                                    <ul class="nav navbar-nav side-nav">
+                              <h:form>
+                                  <ul class="nav navbar-nav side-nav">
 
-                                        <!-- Gestion de usuarios -->
-                                        <li>
-                                            <h:commandLink action="agenda.xhtml" ><i class="fa fa-fw fa-edit"></i> Mi Agenda </h:commandLink>
+                                    <!-- Gestion de usuarios -->
+                                    <li>
+                                        <h:commandLink action="agenda.xhtml" ><i class="fa fa-fw fa-edit"></i> Mi Agenda </h:commandLink>
 
-                                        </li>
-                                        <li>
-                                            <h:commandLink action="verCiudadanos.xhtml" ><i class="fa fa-fw fa-edit"></i> Ver ciudadanos </h:commandLink>
+                                    </li>
+                                    <li>
+                                        <h:commandLink action="verCiudadanos.xhtml" ><i class="fa fa-fw fa-edit"></i> Ver ciudadanos </h:commandLink>
 
-                                        </li>
-                                        <li>
-                                            <h:commandLink action="gestionarExpedientes.xhtml" ><i class="fa fa-fw fa-edit"></i> Gestionar Expedientes </h:commandLink>
-                                        </li>
+                                    </li>
+                                    <li>
+                                        <h:commandLink action="gestionarExpedientes.xhtml" ><i class="fa fa-fw fa-edit"></i> Gestionar Expedientes </h:commandLink>
+                                    </li>
 
-                                    </ul>
-                                </h:form></center>
+                                </ul>
+                                </h:form>
                         </div>
                         <!-- /.navbar-collapse -->
                     </nav>
@@ -143,10 +143,10 @@
                                             <f:facet name="header">
                                                 Ciudadanos
                                             </f:facet>
-                                            <p:column headerText="DNI ">
+                                            <p:column headerText="DNI " >
                                                 <h:outputText value="#{c.dni}" />
                                             </p:column>
-                                            <p:column headerText="Nombre Profesional">
+                                            <p:column headerText="Nombre Profesional" >
                                                 <h:outputText value="#{c.nombre}" />
                                             </p:column>
                                             <p:column headerText="Apellidos Profesional">
